Refactoring new Integer => Integer.valueOf new Boolean("true") => Boolean.TRUE
git-svn-id: file:///home/coren/project/backup_ho/trunk/Core@933 b8de521a-fa13-0410-8113-fc7ffabbd59a